# basic-telegram-template

./: .env.example  .gitignore  README.md  bot.service  main.py  pyproject.toml  requirements.txt
src/: config.py  misc.py
src/core/: __init__.py  bot.py  database.py  dispatcher.py  logger.py  router.py  starter_manager.py
src/core/cache/: __init__.py  memory.py
src/errors/: _base.py  core.py
src/ext/: resolve_handlers.py
src/ext/filters/: __init__.py  dev.py  owner.py  start.py  starter.py  whitelist.py
src/ext/schedulers/: cache_cleaner.py  starter_cleaner.py
src/handlers/_example/filters/: chat.py  content.py  events.py  user.py
src/handlers/_example/markups/: inline.py  reply.py
src/handlers/_example/misc/: ping.py  starter.py
src/markups/: _keyboard.py  example_inline.py  example_reply.py
src/models/: _model.py  example.py  id.py
src/triggers/: core.py  trigger.py
